packages/webassemblyjs/test/fixtures/type-errors/drop/module.wast
(module (func (result f64) (f64.const 0) (drop)))
